--- a/arduino/platformio.ini
+++ b/arduino/platformio.ini
@@ -14,7 +14,8 @@ board = esp12e
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
-    ESP8266WiFi
-    knolleary/PubSubClient@^2.8
-    LittleFS
-    CertStoreBearSSL
+	ESP8266WiFi
+	knolleary/PubSubClient@^2.8
+	LittleFS
+	CertStoreBearSSL
+	bblanchon/ArduinoJson@^7.0.4
