--- a/arduino/platformio.ini
+++ b/arduino/platformio.ini
@@ -13,9 +13,10 @@ platform = espressif8266
 board = esp12e
 framework = arduino
 monitor_speed = 115200
+upload_port = COM4
+board_build.filesystem = littlefs
 lib_deps = 
 	ESP8266WiFi
 	knolleary/PubSubClient@^2.8
-	LittleFS
-	CertStoreBearSSL
 	bblanchon/ArduinoJson@^7.0.4
+	arduino-libraries/NTPClient@^3.2.1
