--- a/ini/driverbot.ini
+++ b/ini/driverbot.ini
@@ -1,28 +1,24 @@
-//  THIS FILE IS ENSURING A CONNECTION BETWEEN THE ESP8266 AND THE MQTT BROKER, ALSO HANDLING CALLING OF MOTORFUNCTIONS.
+// This file is ensuring a connection betwwen the ESP8266 and the MQTT broker, also handling motorfunctions.
 
-//#include <Arduino.h> // This is not always necessary
-include <ESP8266WiFi.h>
-include <PubSubClient.h>
-include <time.h>
-include <TZ.h>
-include <FS.h>
-include <LittleFS.h>
-include <CertStoreBearSSL.h>
-include <ArduinoJson.h>
-include <Servo.h>
+//#include <Arduino.h> // Try this when having issues
+#include <ESP8266WiFi.h>
+#include <PubSubClient.h>
+#include <time.h>
+#include <TZ.h>
+#include <FS.h>
+#include <LittleFS.h>
+#include <CertStoreBearSSL.h>
+#include <ArduinoJson.h>
+#include <Servo.h>
 
 // Network credentials
 const char* ssid = "ABB_Gym_IOT";
 const char* password = "Welcome2abb";
 
-//const char* ssid = "Hanness iPhone";
-//const char* password = "11223344";
-
-// MQTT cluster URL
-//const char* mqtt_server = "24481123c0884e459cd76ccc6ca6d326.s1.eu.hivemq.cloud";
+// Broker cluster URL
 const char* mqtt_server = "a8900a9a.ala.eu-central-1.emqxsl.com";
 
-// A single, global CertStore which can be used by all connections.
+// A single global CertStore which can be used by all connections.
 // Needs to stay live the entire time any of the WiFiClientBearSSLs are present.
 BearSSL::CertStore certStore;
 
@@ -36,7 +32,7 @@ int value = 0;
 
 void setupWifi() {
     delay(10);
-    // We start by connecting to a WiFi network
+    // Connect to a WiFi network
     Serial.println();
     Serial.print("Connecting to ");
     Serial.println(ssid);
@@ -49,9 +45,6 @@ void setupWifi() {
         delay(500);
         Serial.print(".");
     }
-
-    // If random is implementad later, use random seed
-    //randomSeed(micros());
 
     Serial.println("");
     Serial.println("WiFi connected");
@@ -83,12 +76,10 @@ String direction;
 String steer;
 int speedPercentage;
 int steerAngle;
-int targetX; // Start with no target position
-int targetY;
 
 // Motor variables
 int maxMotorSpeed = 255;
-#define motorPinRightDir 0   //D3 (GPIO 3)
+#define motorPinRightDir 0   //D3 (GPIO 0)
 #define motorPinRightSpeed 5    //D1 (GPIO 5)
 
 // Servo
@@ -98,15 +89,17 @@ Servo servo;
 // Position
 int currentX = 0; // Start position is (0, 0)
 int currentY = 0;
-unsigned long lastTime = 0;
-unsigned long currentTime = 0;
-const float timeToTurn90Degrees = 1.0; // Time to turn 90 degrees in seconds
-const float baseSpeedInCmPerSec = 5.0; // Base speed in cm/s at maximum drive speed (255)
+const float baseSpeedInCmPerSec = 18.0; // Base speed in cm/s at maximum drive speed (255)
 
 unsigned long pressStartTime = 0; // Start time when key is pressed
 bool isKeyPressed = false;        // Flag to track if key is pressed
 int lastSpeed = 0;                // Store the last speed used for driving
-String lastDirection = "";        // Store the last direction
+
+unsigned long steerPressStartTime = 0;
+bool isSteerKeyPressed = false; // Flag to track if steer key is pressed
+String lastDirection = "";
+int lastSteerAngle = 0;
+String lastSteerDirection = "";
 
 float calculateCurrentSpeed(int driveSpeed) {
     return baseSpeedInCmPerSec * (driveSpeed / 255.0);
@@ -120,8 +113,44 @@ void sendEspData() {
 
     char buffer[256];
     size_t n = serializeJson(doc, buffer);
-    buffer[n] = '\0';  // Null-terminate the buffer
+    buffer[n] = '\0'; // Null-terminate the buffer
     client->publish("espData", buffer, n);
+}
+
+void calculateCurrentPosition() {
+    unsigned long pressEndTime = millis();
+    isKeyPressed = false;
+
+    // Calculate the elapsed time
+    float elapsedTime = (pressEndTime - pressStartTime) / 1000.0; // Convert milliseconds to seconds
+
+    // Calculate the distance traveled
+    float currentSpeed = calculateCurrentSpeed(lastSpeed);
+    float distance = currentSpeed * elapsedTime;
+
+    if (lastDirection == "forward") {
+        if (lastSteerDirection == "right") {
+            currentX += distance * sin(lastSteerAngle * PI / 180.0);
+            currentY += distance * cos(lastSteerAngle * PI / 180.0);
+        } else if (lastSteerDirection == "left") {
+            currentX -= distance * sin(lastSteerAngle * PI / 180.0);
+            currentY += distance * cos(lastSteerAngle * PI / 180.0);
+        } else {
+            currentY += distance;
+        }
+    } else if (lastDirection == "backward") {
+        if (lastSteerDirection == "right") {
+            currentX += distance * sin(lastSteerAngle * PI / 180.0);
+            currentY -= distance * cos(lastSteerAngle * PI / 180.0);
+        } else if (lastSteerDirection == "left") {
+            currentX -= distance * sin(lastSteerAngle * PI / 180.0);
+            currentY -= distance * cos(lastSteerAngle * PI / 180.0);
+        } else {
+            currentY -= distance;
+        }
+    }
+
+    sendEspData();
 }
 
 void driveForward(int speed) {
@@ -139,26 +168,7 @@ void driveForward(int speed) {
 
     // Update the last speed and direction
     lastSpeed = speed;
-    lastDirection = "forward";
-
-    /*
-    if (direction == "forward") {
-        digitalWrite(motorPinRightDir, 0);
-        analogWrite(motorPinRightSpeed, speed);
-
-        // Calculate the elapsed time
-        currentTime = millis();
-        float elapsedTime = (currentTime - lastTime) / 1000.0; // Convert milliseconds to seconds
-        
-        lastTime = currentTime;
-
-        // Calculate the distance traveled
-        float currentSpeed = calculateCurrentSpeed(speed);
-        float distance = currentSpeed * elapsedTime;
-        currentY += distance; // Assuming forward movement increases Y-coordinate
-
-        sendEspData();
-    }*/
+    lastDirection = "forward";;
 }
 
 void driveBackward(int speed) {
@@ -177,55 +187,6 @@ void driveBackward(int speed) {
     // Update the last speed and direction
     lastSpeed = speed;
     lastDirection = "backward";
-
-    /*
-    if (direction == "backward") {
-        digitalWrite(motorPinRightDir, 1);
-        analogWrite(motorPinRightSpeed, speed);
-
-        // Calculate the elapsed time
-        currentTime = millis();
-        float elapsedTime = (currentTime - lastTime) / 1000.0;
-        
-        lastTime = currentTime;
-
-        // Calculate the distance traveled
-        float currentSpeed = calculateCurrentSpeed(speed);
-        float distance = currentSpeed * elapsedTime;
-        currentY -= distance; // Assuming backward movement decreases Y-coordinate
-
-        sendEspData();
-    }
-    */
-}
-
-void stopDriving() {
-    digitalWrite(motorPinRightDir, 0);
-    analogWrite(motorPinRightSpeed, 0);
-
-    // If the key was released, calculate the distance
-    if (isKeyPressed) {
-        unsigned long pressEndTime = millis();
-        isKeyPressed = false;
-
-        // Calculate the elapsed time
-        float elapsedTime = (pressEndTime - pressStartTime) / 1000.0; // Convert milliseconds to seconds
-
-        // Calculate the distance traveled
-        float currentSpeed = calculateCurrentSpeed(lastSpeed);
-        float distance = currentSpeed * elapsedTime;
-
-        if (lastDirection == "forward") {
-            currentY += distance; // Assuming forward movement increases Y-coordinate
-        } else if (lastDirection == "backward") {
-            currentY -= distance; // Assuming backward movement decreases Y-coordinate
-        }
-
-        sendEspData();
-    }
-
-    // Reset the last direction
-    lastDirection = "";
 }
 
 void steerRight(int angle, int speed) {
@@ -233,28 +194,20 @@ void steerRight(int angle, int speed) {
     Serial.print(angle);
     Serial.print("° angle");
 
-    // Make sure only right is hold down
+    // Make sure only right is held down
     if (steer == "right") {
-        servo.write(90 - (angle - 3));
-        
-        /*
-        if (direction == "forward" || direction == "backward") {
-            // Calculate the elapsed time
-            currentTime = millis();
-            float elapsedTime = (currentTime - lastTime) / 1000.0;
-            lastTime = currentTime;
-
-            // Calculate the distance traveled while turning
-            float currentSpeed = calculateCurrentSpeed(speed);
-            float distance = currentSpeed * elapsedTime;
-            // Assuming right turn increases X-coordinate and decreases Y-coordinate
-            currentX += distance * cos(angle * PI / 180.0);
-            currentY -= distance * sin(angle * PI / 180.0);
-
-            sendEspData();
-        }
-        */
+        servo.write(90 - (angle - 3));   
     }
+
+    // If the steering key was just pressed, record the start time
+    if (!isSteerKeyPressed || lastSteerDirection != "right") {
+        steerPressStartTime = millis();
+        isSteerKeyPressed = true;
+    }
+
+    // Update the last steer angle and direction
+    lastSteerAngle = angle;
+    lastSteerDirection = "right";
 }
 
 void steerLeft(int angle, int speed) {
@@ -262,38 +215,40 @@ void steerLeft(int angle, int speed) {
     Serial.print(angle);
     Serial.print("° angle");
 
-    // Make sure only left is hold down
+    // Make sure only left is held down
     if (steer == "left") {
         servo.write(90 + angle);
-
-        /*
-        // Update position only if moving forward or backward
-        if (direction == "forward" || direction == "backward") {
-            // Calculate the elapsed time
-            currentTime = millis();
-            float elapsedTime = (currentTime - lastTime) / 1000.0;
-            lastTime = currentTime;
-
-            // Calculate the distance traveled while turning
-            float currentSpeed = calculateCurrentSpeed(speed);
-            float distance = currentSpeed * elapsedTime;
-            // Assuming left turn decreases X-coordinate and increases Y-coordinate
-            currentX -= distance * cos(angle * PI / 180.0);
-            currentY += distance * sin(angle * PI / 180.0);
-
-            sendEspData();
-        }
-        */
     }
+
+    // If the steering key was just pressed, record the start time
+    if (!isSteerKeyPressed || lastSteerDirection != "left") {
+        steerPressStartTime = millis();
+        isSteerKeyPressed = true;
+    }
+
+    // Update the last steer angle and direction
+    lastSteerAngle = angle;
+    lastSteerDirection = "left";
+}
+
+void stopDriving() {
+    digitalWrite(motorPinRightDir, 0);
+    analogWrite(motorPinRightSpeed, 0);
+
+    calculateCurrentPosition();
+
+    // Reset the last direction
+    lastDirection = "";
 }
 
 // Reset steering if you steered right
 void resetSteering() {
-   servo.write(90);
-}
+    servo.write(90);
 
-void moveToTarget(int x, int y) {
-    Serial.print("Moving to: " + '(' + x + ',' + y + ')');
+    calculateCurrentPosition();
+
+    // Reset the last steer direction
+    lastSteerDirection = "";
 }
 
 // Recieving a message from the broker
@@ -313,8 +268,6 @@ void callback(char* topic, byte* payload, unsigned int length) {
         steer = doc["steer"].as<String>();
         speedPercentage = doc["speed"];
         steerAngle = doc["steerAngle"];
-        targetX = doc["targetX"];
-        targetY = doc["targetY"];
 
         // Print the received JSON data
         Serial.print("Received JSON: ");
@@ -340,11 +293,6 @@ void callback(char* topic, byte* payload, unsigned int length) {
         } else if (steer == "") {
             resetSteering();
         }
-
-        // Move only if the target position is a different location from the current one
-        if (currentX != targetX && currentY != targetY) {
-            moveToTarget(targetX, targetY);
-        }
     }
 
     if (strcmp(topic, "ping") == 0) {
@@ -359,15 +307,17 @@ void reconnect() {
     // Loop until we’re reconnected
     while (!client->connected()) {
         Serial.print("Attempting MQTT connection…");
-        String clientId = "ESP8266Client - MyClient";
+        String clientId = "ESP8266Client";
 
         // Attempt to connect
         if (client->connect(clientId.c_str(), "Hannes_Gingby", "!xfdq4.g6XM2!vh")) {
-            Serial.println("connected");
+            Serial.println(" Connected");
 
             // Subscribe to the topics
             client->subscribe("userData");
             client->subscribe("ping");
+
+            sendEspData();
         } else {
             Serial.print("failed, rc = ");
             Serial.print(client->state());
@@ -396,11 +346,7 @@ void setup() {
     pinMode(motorPinRightSpeed, OUTPUT);
 
     // Servo setup
-    // servo.write(0);
     servo.attach(servoPin);
-
-    // You can use the insecure mode, when you want to avoid the certificates
-    //espClient.setInsecure();
 
     int numCerts = certStore.initCertStore(LittleFS, PSTR("/certs.idx"), PSTR("/certs.ar"));
     Serial.printf("Number of CA certs read: %d\n", numCerts);
@@ -417,9 +363,6 @@ void setup() {
 
     client->setServer(mqtt_server, 8883);
     client->setCallback(callback);
-
-    // Initialize lastTime
-    lastTime = millis();
 }
 
 void loop() {
@@ -428,5 +371,5 @@ void loop() {
         reconnect();
     }
 
-    client->loop();
+    client->loop();    
 }
